--- a/app/src/main/res/layout/activity_edit_procedure.xml
+++ b/app/src/main/res/layout/activity_edit_procedure.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/greenn"
-    android:backgroundTint="@color/grey_background_tint"
     android:backgroundTintMode="src_over"
     android:orientation="vertical"
     android:padding="20dp"
@@ -16,15 +15,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Edit Procedure"
-        android:textColor="@color/white"
-        android:textSize="20sp" />
+        android:textColor="@color/my_app_on_primary"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <View
-        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="5dp"
-        android:background="@color/white" />
+        android:background="@color/my_app_on_primary" />
 
     <TextView
         android:id="@+id/spinnerLabel_tv"
@@ -33,7 +32,8 @@
         android:layout_marginTop="5dp"
         android:labelFor="@id/procedureCategory_spinner"
         android:text="Select a procedure category below"
-        android:textColor="@color/white" />
+        android:textColor="@color/my_app_on_primary"
+        android:textSize="16sp" />
 
     <Spinner
         android:id="@+id/procedureCategory_spinner"
@@ -50,19 +50,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="Description"
-        android:textColor="@color/white" />
+        android:textColor="@color/my_app_on_primary"
+        android:textSize="16sp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/procedureDescription_tb"
         android:layout_width="300dp"
-        android:layout_height="150dp"
+        android:layout_height="100dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="5dp"
-        app:boxBackgroundColor="@color/white"
-        app:boxBackgroundMode="outline"
-        app:boxStrokeColor="@color/green"
-        app:endIconTint="@color/green"
-        app:startIconTint="@color/green">
+        app:boxBackgroundColor="@color/my_app_on_primary"
+        app:boxBackgroundMode="filled">
 
         <EditText
             android:layout_width="match_parent"
@@ -73,7 +71,7 @@
             android:paddingTop="5dp"
             android:paddingEnd="5dp"
             android:paddingBottom="5dp"
-            android:textColor="@color/black" />
+            android:textColor="@color/my_app_primary_dark" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -83,7 +81,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="Person who performed procedure"
-        android:textColor="@color/white" />
+        android:textColor="@color/my_app_on_primary"
+        android:textSize="16sp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/procedurePerformer_tb"
@@ -91,13 +90,12 @@
         android:layout_height="48dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="5dp"
-        app:boxBackgroundColor="@color/white"
-        app:boxBackgroundMode="outline"
+        app:boxBackgroundColor="@color/my_app_on_primary"
+        app:boxBackgroundMode="filled"
         app:boxCornerRadiusBottomEnd="5dp"
         app:boxCornerRadiusBottomStart="5dp"
         app:boxCornerRadiusTopEnd="5dp"
-        app:boxCornerRadiusTopStart="5dp"
-        app:boxStrokeColor="@color/white">
+        app:boxCornerRadiusTopStart="5dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -105,7 +103,7 @@
             android:gravity="start|top"
             android:padding="5dp"
             android:textAlignment="viewStart"
-            android:textColor="@color/black" />
+            android:textColor="@color/my_app_primary_dark" />
 
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -118,13 +116,10 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
-        android:backgroundTint="@color/green"
         android:elevation="6dp"
         android:text="Date performed"
-        android:textColor="@color/white"
         android:textSize="16sp"
         app:cornerRadius="10dp"
-        app:strokeColor="@color/white"
         app:strokeWidth="0.5dp" />
 
     <TextView
@@ -133,7 +128,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="03/01/2001"
-        android:textColor="@color/white"
         android:textSize="20sp" />
 
     <Button
@@ -143,15 +137,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
-        android:backgroundTint="@color/green"
         android:backgroundTintMode="src_over"
         android:elevation="6dp"
         android:text="Save Edit"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:cornerRadius="10dp"
-        app:strokeColor="@color/white"
-        app:strokeWidth="0.5dp" />
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/cancel_btn"
@@ -159,13 +148,11 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:backgroundTint="#FA3122"
         android:backgroundTintMode="src_over"
         android:elevation="6dp"
         android:text="Cancel"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:cornerRadius="10dp" />
+        android:textSize="16sp" />
 
 </LinearLayout>
