--- a/app/src/main/res/drawable/background_bottom.xml
+++ b/app/src/main/res/drawable/background_bottom.xml
@@ -5,8 +5,8 @@
 
         <shape android:shape="rectangle">
 
-            <solid android:color="#E4E5E9"/>
-            <corners android:topRightRadius="50dp" android:topLeftRadius="50dp"/>
+            <solid android:color="@color/my_app_on_primary"/>
+            <corners android:radius="20dp"/>
 
         </shape>
 
