--- a/app/src/main/res/layout/activity_learner_profile.xml
+++ b/app/src/main/res/layout/activity_learner_profile.xml
@@ -1,77 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/greenn"
+    android:fillViewport="true"
+    tools:context=".LearnerProfileActivity"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/greenn"
-        android:backgroundTint="#54000000"
-        android:backgroundTintMode="src_over"
         android:orientation="vertical"
-        android:padding="20dp"
-        tools:context=".LearnerProfileActivity">
+        android:padding="20dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Learner Information"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textColor="@color/my_app_on_primary"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <View
-            android:id="@+id/divider1"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/white" />
+            android:background="@color/my_app_on_primary" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:background="@drawable/home_background"
+            android:backgroundTint="@color/my_app_on_primary"
             android:orientation="vertical"
-            android:padding="10dp"
-            android:layout_marginTop="5dp">
+            android:padding="10dp">
 
             <TextView
                 android:id="@+id/nameTv"
-                style="@style/LearnerInformationText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Cibrian Hofsta"
-                android:textColor="@color/black" />
+                android:textColor="@color/my_app_primary_dark" />
 
             <TextView
                 android:id="@+id/ageTv"
-                style="@style/LearnerInformationText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="22" />
+                android:text="22"
+                android:textColor="@color/my_app_primary_dark" />
 
             <TextView
                 android:id="@+id/sexTv"
-                style="@style/LearnerInformationText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="M" />
+                android:text="M"
+                android:textColor="@color/my_app_primary_dark" />
 
             <TextView
                 android:id="@+id/idTv"
-                style="@style/LearnerInformationText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="0101035298088" />
+                android:text="0101035298088"
+                android:textColor="@color/my_app_primary_dark" />
 
             <TextView
                 android:id="@+id/schoolTv"
-                style="@style/LearnerInformationText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Malibu High School" />
+                android:text="Malibu High School"
+                android:textColor="@color/my_app_primary_dark" />
 
         </LinearLayout>
 
@@ -81,14 +80,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="Screening"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textColor="@color/my_app_on_primary"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <View
-            android:id="@+id/divider2"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/white" />
+            android:background="@color/my_app_on_primary" />
 
         <TextView
             android:id="@+id/noScreening_Tv"
@@ -96,7 +95,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="No screening information"
-            android:textColor="@color/white" />
+            android:textColor="@color/my_app_on_primary" />
 
         <TextView
             android:id="@+id/screeningResultsTv"
@@ -105,7 +104,7 @@
             android:layout_marginTop="5dp"
             android:background="@drawable/home_background"
             android:padding="5dp"
-            android:textColor="@color/green" />
+            android:textColor="@color/my_app_primary_dark" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -114,24 +113,23 @@
 
             <Button
                 android:id="@+id/addScreeningBtn"
+                style="@style/Widget.Material3.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/green"
                 android:text="Add"
-                android:textColor="@color/white"
+                android:textColor="@color/my_app_on_primary"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                app:cornerRadius="10dp"
-                app:strokeColor="@color/white"
-                app:strokeWidth="0.5dp" />
+                app:cornerRadius="10dp" />
 
             <Button
                 android:id="@+id/editScreeningBtn"
+                style="@style/Widget.Material3.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:backgroundTint="#C6FFBA"
                 android:text="Edit"
-                android:textColor="@color/green"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 app:cornerRadius="10dp" />
         </RelativeLayout>
@@ -141,14 +139,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="Procedures"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textColor="@color/my_app_on_primary"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <View
-            android:id="@+id/divider3"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/white" />
+            android:background="@color/my_app_on_primary" />
 
         <TextView
             android:id="@+id/noProcedureTv"
@@ -156,7 +154,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="No procedure information"
-            android:textColor="@color/white" />
+            android:textColor="@color/my_app_on_primary" />
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -173,21 +171,15 @@
                 android:id="@+id/addProcedureBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@null"
-                android:backgroundTint="#C6FFBA"
-                android:text="Add"
-                android:textColor="@color/green"
-                android:textStyle="bold"
-                app:cornerRadius="10dp" />
+                android:text="Add" />
 
         </RelativeLayout>
 
         <View
-            android:id="@+id/divider4"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="10dp"
-            android:background="@color/white" />
+            android:background="@color/my_app_on_primary" />
 
         <Button
             android:id="@+id/returnBtn"
@@ -195,12 +187,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
-            android:backgroundTint="@color/green"
-            android:backgroundTintMode="src_over"
-            android:text="Return"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            app:strokeColor="@color/white"
-            app:strokeWidth="0.5dp" />
+            android:text="Return" />
     </LinearLayout>
 </ScrollView>
