--- a/app/src/main/res/layout/procedure_layout.xml
+++ b/app/src/main/res/layout/procedure_layout.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:text="Eye Test"
-            android:textColor="@color/green"
+            android:textColor="@color/my_app_primary_dark"
             android:textSize="16sp" />
 
         <View
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginBottom="5dp"
-            android:background="@color/green" />
+            android:background="@color/my_app_primary_dark" />
 
         <TextView
             android:id="@+id/descriptionTv"
@@ -36,26 +36,27 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:text="The learners eyes are extremely irritated and need immediate diagnosis."
-            android:textColor="@color/black" />
+            android:textColor="@color/my_app_primary_dark" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
                 android:id="@+id/performedByTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
                 android:text="Dr Innocent Ramatladi"
-                android:textColor="@color/green"
-                android:layout_alignParentStart="true"/>
+                android:textColor="@color/my_app_primary_dark" />
 
             <TextView
                 android:id="@+id/datePerformedTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
                 android:text="03 January 2023"
-                android:textColor="@color/black"
-                android:layout_alignParentEnd="true"/>
+                android:textColor="@color/my_app_primary_dark" />
         </RelativeLayout>
 
 
