final code before final upgrades

--- a/app/src/main/res/layout/activity_add_screening.xml
+++ b/app/src/main/res/layout/activity_add_screening.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/greenn"
     tools:context=".AddScreeningActivity">
 
     <LinearLayout
@@ -16,50 +17,67 @@
             android:id="@+id/screening_heading_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:text="Screening"
+            android:textColor="@color/my_app_on_primary"
             android:textSize="20sp"
-            android:layout_marginBottom="10dp"/>
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/my_app_on_primary" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:text="Eye Screening"
-            android:textSize="20sp"
-            android:layout_marginBottom="5dp"/>
+            android:textColor="@color/my_app_on_primary"
+            android:textSize="20sp" />
 
         <LinearLayout
             android:id="@+id/eyeQuestionnaireLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            android:padding="5dp"
+            android:background="@drawable/home_background"
+            android:orientation="vertical" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:text="Ear Screening"
-            android:textSize="20sp"
-            android:layout_marginBottom="5dp"/>
+            android:textColor="@color/my_app_on_primary"
+            android:textSize="20sp" />
 
         <LinearLayout
             android:id="@+id/earQuestionnaireLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            android:padding="5dp"
+            android:background="@drawable/home_background"
+            android:orientation="vertical" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:text="Throat Screening"
-            android:textSize="20sp"
-            android:layout_marginBottom="5dp"/>
+            android:textColor="@color/my_app_on_primary"
+            android:textSize="20sp" />
 
         <LinearLayout
             android:id="@+id/throatQuestionnaireLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"/>
+            android:padding="5dp"
+            android:background="@drawable/home_background"
+            android:orientation="vertical" />
 
         <Button
             android:id="@+id/save_btn"
