--- a/app/src/main/res/layout/activity_edit_screening.xml
+++ b/app/src/main/res/layout/activity_edit_screening.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/greenn"
     tools:context=".EditScreeningActivity">
 
     <LinearLayout
@@ -16,16 +17,25 @@
             android:id="@+id/screening_heading_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Screening"
+            android:layout_marginBottom="10dp"
+            android:text="Edit Screening"
+            android:textColor="@color/my_app_on_primary"
             android:textSize="20sp"
-            android:layout_marginBottom="10dp"/>
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/my_app_on_primary" />
 
         <LinearLayout
             android:id="@+id/editScreeningLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-        </LinearLayout>
+            android:background="@drawable/home_background"
+            android:orientation="vertical"
+            android:padding="5dp"></LinearLayout>
 
         <Button
             android:id="@+id/save_btn"
