--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -32,5 +32,18 @@
         app:iconGravity="textStart"
         app:iconSize="25dp" />
 
+    <Button
+        android:id="@+id/logoutBtn"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/my_app_error"
+        android:backgroundTintMode="src_over"
+        android:text="Log out"
+        android:textSize="16sp"
+        app:iconGravity="textStart"
+        app:iconSize="25dp" />
+
 
 </LinearLayout>
