--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,15 +15,16 @@
         <item name="colorError">@color/my_app_error</item>
 
         <!-- Text color for the primary background content in dark mode -->
-        <item name="android:textColorPrimary">@color/my_app_on_primary</item>
+        <item name="android:textColorPrimary">#43A047</item>
 
         <!-- Text color for the secondary background content in dark mode -->
-        <item name="android:textColorSecondary">@color/my_app_on_secondary</item>
+        <item name="android:textColorSecondary">#00897B</item>
 
         <!-- Background color for the app in dark mode -->
         <item name="android:windowBackground">@color/my_app_surface</item>
 
         <!-- Background color for the action bar in dark mode -->
         <item name="android:colorBackground">@color/my_app_primary</item>
+
     </style>
 </resources>
