--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,15 +15,16 @@
         <item name="colorError">@color/my_app_error</item>
 
         <!-- Text color for the primary background content -->
-        <item name="android:textColorPrimary">@color/my_app_on_primary</item>
+        <item name="android:textColorPrimary">@color/my_app_primary</item>
 
         <!-- Text color for the secondary background content -->
-        <item name="android:textColorSecondary">@color/my_app_on_secondary</item>
+        <item name="android:textColorSecondary">@color/my_app_primary</item>
 
         <!-- Background color for the app -->
-        <item name="android:windowBackground">@android:color/white</item>
+        <item name="android:windowBackground">@color/my_app_primary</item>
 
         <!-- Background color for the action bar -->
         <item name="android:colorBackground">@color/my_app_primary</item>
+
     </style>
 </resources>
